.pullapprove.yml: add codygray

--- a/.pullapprove.yml
+++ b/.pullapprove.yml
@@ -33,6 +33,7 @@ groups:
       - angussidney
       - bertiebaggio # Rob Hallam
       - bwDraco
+      - codygray
       - double-beep
       - ferrybig
       - honnza  # Jan Dvorak
