--- a/rooms.yml
+++ b/rooms.yml
@@ -563,6 +563,7 @@ stackoverflow.com:
       - 8629256  # M--
       - 15062967 # Adrian Mole
       - 72095    # Ryan M
+      - 8372853  # cigien
       # NOTICE: please don't add new users until you have Room Owner approval
 
   111347:  # SOBotics
