Add Xnero to SD in Charcoal HQ -autopull

--- a/rooms.yml
+++ b/rooms.yml
@@ -176,6 +176,7 @@ stackexchange.com:
       - 18074340 # Ollie
       - 11421497 # cigien
       - 19279602 # ppwater
+      - 17078244 # Xnero
 
   65945:  # Charcoal Test
     commands: true
