--- a/rooms.yml
+++ b/rooms.yml
@@ -177,6 +177,7 @@ stackexchange.com:
       - 11421497 # cigien
       - 19279602 # ppwater
       - 17078244 # Xnero
+      - 11644720 # janw
 
   65945:  # Charcoal Test
     commands: true
