--- a/rooms.yml
+++ b/rooms.yml
@@ -178,6 +178,7 @@ stackexchange.com:
       - 19279602 # ppwater
       - 17078244 # Xnero
       - 11644720 # janw
+      - 1233392 # Steve
 
   65945:  # Charcoal Test
     commands: true
